Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/artifactory-prd/artifactory-prd-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory-prd-app
  namespace: artifactory-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory-prd-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: artifactory-prd-app
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: artifactory-prd-app
        image: "docker.bintray.io/jfrog/artifactory-cpp-ce:6.11.1"
        pullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: artif-prd-app
        volumeMounts:
        - mountPath: "/var/opt/jfrog/artifactory"
          name: artifactory-prd-app
      volumes:
        - name: artifactory-prd-app
          persistentVolumeClaim:
            claimName: artifactory-prd-app
      hostname: artifactory-prd-app
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory-prd-app
  namespace: artifactory-prd
spec:
  ports:
  - port: 8081  
  selector:
    app: artifactory-prd-app
