Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/artifactory-prd/artifactory-prd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: artifactory-prd-ingress
  namespace: artifactory-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/proxy-read-timeout: "600"
    ingress.kubernetes.io/proxy-send-timeout: "600"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(v2)/token /artifactory/api/docker/null/v2/token;
      rewrite ^/(v2)/([^\/]*)/(.*) "/artifactory/api/docker/$2/$1/$3";
spec:
  tls:
  - hosts:
    - artifactory.pixeon.cloud
    secretName: artifactory-prd-secret
  rules:
  - host: artifactory.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: artifactory-prd-app
          servicePort: 8081
nginx:
  enabled: false
